syntax = "proto3";
package BankAccounts.Workflows.AddFunds;
option csharp_namespace = "BankAccounts.Workflows.AddFunds";

message AddFundsWorkflowInput {
	string account_id = 1;
	int64 amount = 2;
}